# CLIMB

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  activate.sh  analysis.ipynb  analysis_gold.ipynb  dataset_stats.ipynb  evaluate.py  pyproject.toml  requirements.txt  setup.sh  train.py
conf/: config.yaml
conf/curriculum/: base_mlm.yaml  mlm_to_pos.yaml
conf/data/: strict_small.yaml
conf/data_curriculum/: linear_data_split.yaml  linear_data_split_grammatical_first.yaml  linear_data_split_spoken_first.yaml  linear_ngram.yaml  linear_perplexity.yaml  linear_random_perplexity.yaml  log_data_split_grammatical_first.yaml  log_data_split_spoken_first.yaml  log_ngram.yaml  log_perplexity.yaml  log_random_perplexity.yaml
conf/data_preprocessing/: curriculum_learning.yaml  perplexity.yaml
conf/dataset/: strict_small.yaml  strict_small_gold.yaml  uncleaned_strict_small_gold.yaml
conf/exps/: data_curr.yaml  data_curriculum.yaml  data_objective.yaml  hyperparams.yaml  mlm_objective.yaml  objective_curriculum.yaml  pos_objective.yaml  test.yaml  vocab_curr.yaml  vocabulary.yaml  (+1 more)
hf/: BabyLM.py
notebooks/: analysis_cosine.ipynb  analysis_gold_cosine.ipynb  analysis_gold_jsd.ipynb  analysis_gold_jsd_uncleaned.ipynb  analysis_gold_kl.ipynb  analysis_gold_kl_max.ipynb
scripts/: launch_evaluator.wilkes3  launch_interactive.sh  launch_slurm.wilkes3  launch_torchrun.sh
src/: config.py  dataloader.py  datasampler.py  dataset.py  evaluate.py  evaluator.py  objective.py  pacing_fn.py  preprocessing.py  tokenizer.py  train.py  trainer.py  training_arguments.py
(+96 files in other folders)
