[tool.poetry]
name = "pos-merge"
version = "0.1.0"
description = "Part of Speech tag-based training of rare subwords"
authors = ["Richard Diehl Martinez"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
hydra-core = "^1.3.2"
wandb = "^0.15.12"
transformers = "4.26.1"
datasets = "^2.14.6"
torch = "1.11.0+cu113"
lm-eval = {path = "lib/evaluation-pipeline", extras = ["dev"], develop = true}
pre-commit = "^3.5.0"


[[tool.poetry.source]]
name = "torch-custom"
url = "https://download.pytorch.org/whl/cu113"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
matplotlib = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore-init-module-imports = true
ignore = ["F401"]